--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">TicTacToe</string>
     <string name="x_turn">X plays next</string>
-    <string name="y_turn">Y plays next</string>
+    <string name="o_turn">O plays next</string>
     <string name="x_wins">X wins</string>
-    <string name="y_wins">Y wins</string>
+    <string name="o_wins">O wins</string>
     <string name="game_draw">draw</string>
     <string name="x_player">X</string>
     <string name="o_player">O</string>
